# arkanoid

./: .gitignore  CMakeLists.txt  README.md  android_build.sh  android_config.sh  android_init.sh  android_init_and_build.sh  android_init_build_run.sh  build.gradle.replace  deps_scenario.sh  external_config.sh  main.cpp  store_scripts.sh  update_scripts.sh
android/: android_config.sh  android_run.sh
src/: Ball.cpp  Ball.h  BoxCollider.cpp  BoxCollider.h  CircleCollider.cpp  CircleCollider.h  Collider.cpp  Collider.h  Common.h  FieldBlock.h  Joystick.cpp  Joystick.h  LevelMap.cpp  LevelMap.h  LevelMapCollider.cpp  LevelMapCollider.h  Player.cpp  Player.h  SDL_Utils.h  Utils.cpp  Utils.h  rect.h  vector.h  vector_2d.h
